# Long-Arithmetic-Project

./: CMakeLists.txt  Makefile  README.md  bfnumlib.cpp  bfnumlib.h  bfnumlib.hpp  main.cpp
BFNumLib/: CMakeLists.txt
BFNumLib/include/: bfnumlib.hpp
BFNumLib/src/: bfnumlib.cpp
BFNumLib/test/: test.cpp
lib/: CMakeLists.txt  bfnumlib.cpp  bfnumlib.hpp
test/: CMakeLists.txt  test.cpp
